# git-presets

./: pyproject.toml  tox.toml
.github/workflows/: code-quality.yml  release.yml  test.yml
